5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1646_2449.log
== TEST (2019-04-15 21:32:41) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
d = float(input())
e = float(input())
f = float(input())

u = (c*e) - (b*f)
q = (a*f) - (c*d)

r = (a*e) - (b*d)

x = u/r
y = q/r

if r == 0:
	print("Nao tem solucao")
else:
	print(x)
	print(y)












-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    x = u/r
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 21:32:48) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
d = float(input())
e = float(input())
f = float(input())

u = (c*e) - (b*f)
q = (a*f) - (c*d)

r = (a*e) - (b*d)

x = u/r
y = q/r

if r == 0:
	print("Nao tem solucao")
else:
	print(x)
	print(y)












-- EXECUTION TIME:
0.143659
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 13, in <module>
    x = u/r
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 21:33:47) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
d = float(input())
e = float(input())
f = float(input())

if r == 0:
	print("Nao tem solucao")
else:
	u = (c*e) - (b*f)
	q = (a*f) - (c*d)
	r = (a*e) - (b*d)
	x = u/r
	y = q/r
	print(x)
	print(y)












-- EXECUTION TIME:
0.211221
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 8, in <module>
    if r == 0:
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 21:34:36) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
d = float(input())
e = float(input())
f = float(input())

if ((a*e)-(b*d)) == 0:
	print("Nao tem solucao")
else:
	u = (c*e) - (b*f)
	q = (a*f) - (c*d)
	r = (a*e) - (b*d)
	x = u/r
	y = q/r
	print(x)
	print(y)












-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 21:34:37) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
d = float(input())
e = float(input())
f = float(input())

if ((a*e)-(b*d)) == 0:
	print("Nao tem solucao")
else:
	u = (c*e) - (b*f)
	q = (a*f) - (c*d)
	r = (a*e) - (b*d)
	x = u/r
	y = q/r
	print(x)
	print(y)












-- EXECUTION TIME:
0.192991
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
